--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -19,6 +19,7 @@
     <canvas id="canvas" width="330" height="500"/>
   </div>
 
+  <script type="text/javascript" src="obstacle.js"></script>
   <script type="text/javascript" src="car.js"></script>
   <script type="text/javascript" src="road.js"></script>
   <script type="text/javascript" src="board.js"></script>
